Fixed some DB classes. Started working on the barber's page. Currently, interactive elements don't react to user activity for no apparent reason.

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using barberchainAPI
 @using barberchainAPI.Components
+@using barberchainAPI.Data
+@using Microsoft.EntityFrameworkCore
+@using MudBlazor
