Worked on the barber's page. Added account page. Added authentication, which is currently a little fucked. At some point, the code refused to run because it doesn't see App.razor in Program.cs. I never touched either. It just stopped working. In fact, I was able to run the code despite compiler error popping up. And then it decided to actually stop working. Maybe a fucking gamma ray from the moon hit my processor and flipped some of the bits?

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@namespace barberchainAPI.Components
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +16,7 @@
 
 <body>
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
+    <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
 </body>
 
