--- a/Components/Pages/BarberPage.razor
+++ b/Components/Pages/BarberPage.razor
@@ -1,31 +1,11 @@
 ﻿@page "/barber/{id:int}"
+@rendermode InteractiveServer
 @using System.IO
+@using MudBlazor
+@using System.Collections;
 @inject BarberchainDbContext Context
-<MudPopoverProvider />
-<MudThemeProvider />
-
-<style>
-    .availability-line {
-        display: flex;
-        width: 100%;
-        height: 20px; /* height of the line */
-        border: 1px solid #ccc;
-        margin-top: 10px;
-    }
-
-    .time-block {
-        flex: 1 1 0;
-        border-right: 1px solid #eee; /* optional divider */
-    }
-
-    .time-block.available {
-        background-color: white;
-    }
-
-    .time-block.unavailable {
-        background-color: gray;
-    }
-</style>
+@inject IDialogService DialogService;
+<MudDialogProvider />
 
 @if (barber == null)
 {
@@ -38,11 +18,21 @@ else
         <MudPaper Elevation="3" Class="p-4 rounded-lg">
             <!-- Profile Section -->
             <MudContainer Style="display:flex; padding-top:1rem;">
-                <MudImage Src="@GetImageSrc(barber.Account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%;" />
+                <MudImage Src="@AccountPage.GetImageSrc(barber.Account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%;" />
                 <MudContainer Style="display:flex; flex-direction:column; align-items:flex-start;">
                     <MudText Typo="Typo.h5" Align="Align.Center">@barber.Account.Lastname @barber.Account.Restname</MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">обо мне:</MudText>
                     <MudText Typo="Typo.body1" Align="Align.Center" Class="text-secondary">
                         @barber.Account.Bio
+                    </MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">что я умею:</MudText>
+                    <MudText Typo="Typo.body1" Align="Align.Center" Class="text-secondary">
+                        <MudList T="string">
+                            @foreach (var job in jobs)
+                            {
+                                <MudListItem Text=@job.Job.Name SecondaryText=@(job.Price is null ? job.Job.DefaultPrice.ToString() : job.Price.ToString()) />
+                            }
+                        </MudList>
                     </MudText>
                 </MudContainer>
             </MudContainer>
@@ -58,7 +48,7 @@ else
                     <MudGrid GutterSize="2">
                         <MudItem xs="6" sm="4" md="3">
                             <MudPaper Elevation="1" Class="p-1 rounded">
-                                <MudImage Src="@GetImageSrc(img.ImgFile)" Alt="Auxiliary image" Style="width:100%;height:auto;" />
+                                <MudImage Src="@AccountPage.GetImageSrc(img.ImgFile)" Alt="Auxiliary image" Style="width:100%;height:auto;" />
                             </MudPaper>
                         </MudItem>
                     </MudGrid>
@@ -77,28 +67,10 @@ else
 
             <MudDivider Class="my-4" />
 
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@ToggleOpen">Open schedule</MudButton>
-
-            <MudPopover Open="@_open" Fixed="true" Class="px-4 pt-4">
-                <div class="d-flex flex-column">
-                    <MudText>Content of the popover can be anything.</MudText>
-                    <MudButton OnClick="@ToggleOpen" Class="ml-auto mr-n3 mb-1" Color="Color.Error">Close</MudButton>
-                </div>
-                <div class="availability-line">
-                    @for (int i = 0; i < atuPattern.Length; i++)
-                    {
-                        for (int j = 0; j < 8; j++)
-                        {
-                            byte bitmask = 1;
-                            bitmask <<= j;
-                            bool currentBit = (atuPattern[i] & bitmask) == 1;
-
-
-                            <div class="time-block @(currentBit ? ".available" : ".unavailable")"></div>
-                        }
-                    }
-                </div>
-            </MudPopover>
+            <MudButton @onclick="OpenDialogAsync" Variant="Variant.Filled" Color="Color.Primary">
+                Book
+            </MudButton>
+            
 
         </MudPaper>
     </MudContainer>
@@ -112,8 +84,11 @@ else
     private bool _open;
     private void ToggleOpen() => _open = !_open;
 
-    private byte[] atuPattern { get; set; }
+    public BitArray AtuPattern { get; set; }
     private Barber? barber;
+    private List<BarberJob> jobs;
+
+
     private DateTime? _selectedDate = DateTime.Today;
 
     protected override async Task OnInitializedAsync()
@@ -124,21 +99,17 @@ else
             .Include(b => b.Images)
             .FirstOrDefaultAsync(b => b.Id == id);
 
-        atuPattern = await GetAvailabilityForDay(id, _selectedDate);
+        jobs = Context.BarberJobs
+            .Include(x => x.Job)
+            .Where(x => x.BarberId == id)
+            .ToList();
+
+        AtuPattern = await GetAvailabilityForDay(id, _selectedDate);
     }
 
-    // Helper to convert a byte[] image from DB to base64 for MudImage or MudAvatar
-    private string GetImageSrc(byte[]? imageBytes)
+    public async Task<BitArray> GetAvailabilityForDay(int barberId, DateTime? day)
     {
-        if (imageBytes == null || imageBytes.Length == 0)
-            return "images/default-profile.jpg"; // fallback
 
-        string base64 = Convert.ToBase64String(imageBytes);
-        return $"data:image/jpeg;base64,{base64}";
-    }
-
-    public async Task<byte[]> GetAvailabilityForDay(int barberId, DateTime? day)
-    {
         var availability = await Context.BarberScheduleDays
             .Where(a => a.BarberId == barberId && a.Date == day.Value.ToUniversalTime())
             .Select(a => a.AtuPattern)
@@ -146,9 +117,17 @@ else
 
         if (availability is null)
         {
-            availability = new byte[12] { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
+            availability = new BitArray(Enumerable.Repeat<bool>(false, 96).ToArray());
         }
 
         return availability;
+    }
+
+    private Task OpenDialogAsync()
+    {
+        var options = new DialogOptions { CloseOnEscapeKey = true, MaxWidth = MaxWidth.ExtraExtraLarge, FullWidth = true };
+        var params_ = new DialogParameters<BarberPageDialog> { { x => x.AtuPattern, AtuPattern } };
+
+        return DialogService.ShowAsync<BarberPageDialog>("Book time", params_, options);
     }
 }
