--- a/Components/App.razor
+++ b/Components/App.razor
@@ -11,6 +11,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css?v=@(MudBlazor.Metadata.Version)" rel="stylesheet" />
     <link rel="stylesheet" href="barberchainAPI.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <component type="typeof(App)" render-mode="Server" />
     <HeadOutlet />
 </head>
 
