--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@namespace barberchainAPI.Components.Layout
 @using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims;
 @inherits LayoutComponentBase
 @inject NavigationManager Navigation
 @inject AuthenticationStateProvider AuthStateProvider
@@ -10,6 +11,11 @@
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">Barberchain</MudText>
         <MudSpacer />
+        <AuthorizeView>
+            <Authorized>
+                @User.Identity.Name
+            </Authorized>
+        </AuthorizeView>
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
         <MudIconButton @onclick="AccessProfile" Icon="@Icons.Material.Filled.AccountCircle" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
@@ -19,14 +25,24 @@
 </MudLayout>
 
 @code {
-    private async Task AccessProfile()
+    ClaimsPrincipal? User { get; set; }
+
+    protected override async Task OnInitializedAsync()
     {
         var authState = await AuthStateProvider.GetAuthenticationStateAsync();
-        var user = authState.User;
+        User = authState.User;
+    }
 
-        if (user.Identity?.IsAuthenticated == true)
+    private void AccessProfile()
+    {
+        if (User is null)
         {
-            var userIdClaim = user.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
+            return;
+        }
+
+        if (User.Identity?.IsAuthenticated == true)
+        {
+            var userIdClaim = User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
             if (int.TryParse(userIdClaim, out var userId))
             {
                 Navigation.NavigateTo($"/account/{userId}");
