--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -1,11 +1,14 @@
 ﻿@page "/account/{id:int}"
+@rendermode InteractiveServer
 @using System.IO
 @using Microsoft.AspNetCore.Components.Authorization
 @using MudBlazor
 @using System.Collections;
+@using System.Security.Claims
 @inject BarberchainDbContext Context
 @inject IDialogService DialogService;
 @inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager Navigation
 <MudDialogProvider />
 
 @if (account == null)
@@ -16,49 +19,82 @@ else
 {
     <MudContainer Style="max-width:800px;" Class="mx-auto mt-4">
 
-        @if (IsOwner)
+        <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
+            <MudButton @onclick="() => currentComponent = AccountComponent.Profile">Профиль</MudButton>
+            <MudButton @onclick="() => currentComponent = AccountComponent.Reviews">Мои отзывы</MudButton>
+            <MudButton @onclick="() => currentComponent = AccountComponent.Notifications">Уведомления</MudButton>
+            <MudButton @onclick="() => currentComponent = AccountComponent.OrderHistory">История заказов</MudButton>
+        </MudButtonGroup>
+
+        @switch (currentComponent)
         {
-            <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
-            <MudButton>Профиль</MudButton>
-            <MudButton>Мои отзывы</MudButton>
-            <MudButton>Уведомления</MudButton>
-            <MudButton>История заказов</MudButton>
-            </MudButtonGroup>
+            case AccountComponent.Profile:
+            {
+                <Profile></Profile>
+                break;
+            }
+            case AccountComponent.Reviews:
+            {
+                <Reviews></Reviews>
+                break;
+            }
+            case AccountComponent.Notifications:
+            {
+                <Notifications></Notifications>
+                break;
+            }
+            case AccountComponent.OrderHistory:
+            {
+                <OrderHistroy></OrderHistroy>
+                break;
+            }
         }
 
-        <MudPaper Elevation="3" Class="p-4 rounded-lg">
-            <!-- Profile Section -->
-            <MudContainer Style="display:flex; padding-top:1rem;">
-                <MudImage Src="@GetImageSrc(account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%;" />
-                <MudContainer Style="display:flex; flex-direction:column; align-items:flex-start;">
-                    <MudText Typo="Typo.h5" Align="Align.Center">@account.Lastname @account.Restname</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">обо мне:</MudText>
-                    <MudText Typo="Typo.body1" Align="Align.Center" Class="text-secondary">
-                        @account.Bio
-                    </MudText>
-                </MudContainer>
-            </MudContainer>
-        </MudPaper>
     </MudContainer>
 }
 
 @code
 {
-    [Parameter]
-    public int id { get; set; }
-    private bool IsOwner = false;
+    private enum AccountComponent
+    {
+        Profile,
+        Reviews,
+        Notifications,
+        OrderHistory
+    }
 
-    private Account? account;
+    private AccountComponent currentComponent = AccountComponent.Notifications;
 
-    private DateTime? _selectedDate = DateTime.Today;
+    [Parameter] public int id { get; set; }
+    protected bool IsOwner = false;
+
+    protected ClaimsPrincipal? user;
+
+    protected Account? account;
+
+    //Barber variables
+    protected List<BarberJob> jobs;
+    protected Barber? barber;
+    public BitArray? AtuPattern { get; set; }
+
+    protected DateTime? _selectedDate = DateTime.Today;
 
     protected override async Task OnInitializedAsync()
     {
         account = await Context.Accounts
             .FirstOrDefaultAsync(a => a.Id == id);
 
+        if (account is null)
+        {
+            Navigation.NavigateTo("/");
+        }
+
         var authState = await AuthStateProvider.GetAuthenticationStateAsync();
-        var user = authState.User;
+        this.user = authState.User;
+
+        Console.WriteLine("=== CLAIMS ===");
+        foreach (var c in user.Claims)
+            Console.WriteLine($"{c.Type} = {c.Value}");
 
         if (user.Identity?.IsAuthenticated == true)
         {
@@ -67,6 +103,22 @@ else
             {
                 IsOwner = userId == id;
             }
+        }
+
+        if (account.Role == AccountRole.Barber)
+        {
+            // Load the barber and related data (account, images, etc.)
+            barber = await Context.Barbers
+                .Include(b => b.Account)
+                .Include(b => b.Images)
+                .FirstOrDefaultAsync(b => b.AccountId == id);
+
+            jobs = Context.BarberJobs
+                .Include(x => x.Job)
+                .Where(x => x.BarberId == id)
+                .ToList();
+
+            AtuPattern = await GetAvailabilityForDay(id, _selectedDate);
         }
     }
 
@@ -77,5 +129,29 @@ else
 
         string base64 = Convert.ToBase64String(imageBytes);
         return $"data:image/jpeg;base64,{base64}";
+    }
+
+    public async Task<BitArray> GetAvailabilityForDay(int barberId, DateTime? day)
+    {
+
+        var availability = await Context.BarberScheduleDays
+            .Where(a => a.BarberId == barberId && a.Date == day.Value.ToUniversalTime())
+            .Select(a => a.AtuPattern)
+            .FirstOrDefaultAsync();
+
+        if (availability is null)
+        {
+            availability = new BitArray(Enumerable.Repeat<bool>(false, 96).ToArray());
+        }
+
+        return availability;
+    }
+
+    protected Task OpenDialogAsync()
+    {
+        var options = new DialogOptions { CloseOnEscapeKey = true, MaxWidth = MaxWidth.ExtraExtraLarge, FullWidth = true };
+        var params_ = new DialogParameters<BarberPageDialog> { { x => x.AtuPattern, AtuPattern } };
+
+        return DialogService.ShowAsync<BarberPageDialog>("Book time", params_, options);
     }
 }
