--- a/Components/Pages/AuthPage.razor
+++ b/Components/Pages/AuthPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/auth"
+@rendermode InteractiveServer
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
 @inject IHttpClientFactory HttpClientFactory
