--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,8 +1,9 @@
-﻿@using barberchainAPI.Components.Layout;
+﻿@using barberchainAPI.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
 </Router>
