Auth finally works and let me tell you - it's been a jorney. I managed to get this shit to work. Barely could believe my eyes when I saw it works for the first time. The issue was that I was sending login request not from browser but from server and so I added .js function to send request from browser. The solution turned out to be so simple...

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -16,11 +16,10 @@
 </head>
 
 <body>
-    <CascadingAuthenticationState>
-        <Routes />
-    </CascadingAuthenticationState>
+    <Routes />
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
