--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@namespace barberchainAPI.Components.Layout
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims;
+@using MudBlazor
 @inherits LayoutComponentBase
 @inject NavigationManager Navigation
 @inject AuthenticationStateProvider AuthStateProvider
@@ -8,24 +9,14 @@
 <MudThemeProvider />
 
 <MudLayout>
-    <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Barberchain</MudText>
-        <MudSpacer />
-        <AuthorizeView>
-            <Authorized>
-                @User.Identity.Name
-            </Authorized>
-        </AuthorizeView>
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
-        <MudIconButton @onclick="AccessProfile" Icon="@Icons.Material.Filled.AccountCircle" Color="Color.Inherit" Edge="Edge.End" />
-    </MudAppBar>
+    <NavMenu></NavMenu>
     <MudMainContent>
         @Body
     </MudMainContent>
 </MudLayout>
 
 @code {
-    ClaimsPrincipal? User { get; set; }
+    protected ClaimsPrincipal? User { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -33,7 +24,7 @@
         User = authState.User;
     }
 
-    private void AccessProfile()
+    protected void AccessProfile()
     {
         if (User is null)
         {
@@ -46,6 +37,7 @@
             if (int.TryParse(userIdClaim, out var userId))
             {
                 Navigation.NavigateTo($"/account/{userId}");
+                Navigation.Refresh();
             }
         }
     }
