--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -5,13 +5,9 @@
 @using MudBlazor
 @using System.Collections;
 @using System.Security.Claims
-@inject BarberchainDbContext Context
-@inject IDialogService DialogService;
-@inject AuthenticationStateProvider AuthStateProvider
-@inject NavigationManager Navigation
 <MudDialogProvider />
 
-@if (account == null)
+@if (account is null)
 {
     <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
 }
@@ -19,33 +15,36 @@ else
 {
     <MudContainer Style="max-width:800px;" Class="mx-auto mt-4">
 
-        <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
-            <MudButton @onclick="() => currentComponent = AccountComponent.Profile">Профиль</MudButton>
-            <MudButton @onclick="() => currentComponent = AccountComponent.Reviews">Мои отзывы</MudButton>
-            <MudButton @onclick="() => currentComponent = AccountComponent.Notifications">Уведомления</MudButton>
-            <MudButton @onclick="() => currentComponent = AccountComponent.OrderHistory">История заказов</MudButton>
-        </MudButtonGroup>
-
+        @if (IsOwner)
+        {
+            <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
+                <MudButton @onclick="() => currentComponent = AccountComponent.Profile">Профиль</MudButton>
+                <MudButton @onclick="() => currentComponent = AccountComponent.Reviews">Мои отзывы</MudButton>
+                <MudButton @onclick="() => currentComponent = AccountComponent.Notifications">Уведомления</MudButton>
+                <MudButton @onclick="() => currentComponent = AccountComponent.OrderHistory">История заказов</MudButton>
+            </MudButtonGroup>
+        }
+        
         @switch (currentComponent)
         {
             case AccountComponent.Profile:
             {
-                <Profile></Profile>
+                <Profile id="@id" user="@user" account="@account"></Profile>
                 break;
             }
             case AccountComponent.Reviews:
             {
-                <Reviews></Reviews>
+                <Reviews id="@id"></Reviews>
                 break;
             }
             case AccountComponent.Notifications:
             {
-                <Notifications></Notifications>
+                <Notifications id="@id"></Notifications>
                 break;
             }
             case AccountComponent.OrderHistory:
             {
-                <OrderHistroy></OrderHistroy>
+                <OrderHistroy id="@id"></OrderHistroy>
                 break;
             }
         }
@@ -63,7 +62,16 @@ else
         OrderHistory
     }
 
-    private AccountComponent currentComponent = AccountComponent.Notifications;
+    [Inject]
+    protected BarberchainDbContext Context { get; set; }
+
+    [Inject]
+    NavigationManager Navigation { get; set; }
+
+    [Inject]
+    AuthenticationStateProvider AuthStateProvider { get; set; }
+
+    private AccountComponent currentComponent = AccountComponent.Profile;
 
     [Parameter] public int id { get; set; }
     protected bool IsOwner = false;
@@ -72,53 +80,24 @@ else
 
     protected Account? account;
 
-    //Barber variables
-    protected List<BarberJob> jobs;
-    protected Barber? barber;
-    public BitArray? AtuPattern { get; set; }
-
-    protected DateTime? _selectedDate = DateTime.Today;
-
     protected override async Task OnInitializedAsync()
     {
-        account = await Context.Accounts
-            .FirstOrDefaultAsync(a => a.Id == id);
-
-        if (account is null)
-        {
-            Navigation.NavigateTo("/");
-        }
+        account = await Context.Accounts.FirstOrDefaultAsync(a => a.Id == id);
 
         var authState = await AuthStateProvider.GetAuthenticationStateAsync();
         this.user = authState.User;
 
-        Console.WriteLine("=== CLAIMS ===");
-        foreach (var c in user.Claims)
-            Console.WriteLine($"{c.Type} = {c.Value}");
-
         if (user.Identity?.IsAuthenticated == true)
         {
+            Console.WriteLine("=== CLAIMS ===");
+            foreach (var c in user.Claims)
+                Console.WriteLine($"{c.Type} = {c.Value}");
+
             var userIdClaim = user.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
             if (int.TryParse(userIdClaim, out var userId))
             {
                 IsOwner = userId == id;
             }
-        }
-
-        if (account.Role == AccountRole.Barber)
-        {
-            // Load the barber and related data (account, images, etc.)
-            barber = await Context.Barbers
-                .Include(b => b.Account)
-                .Include(b => b.Images)
-                .FirstOrDefaultAsync(b => b.AccountId == id);
-
-            jobs = Context.BarberJobs
-                .Include(x => x.Job)
-                .Where(x => x.BarberId == id)
-                .ToList();
-
-            AtuPattern = await GetAvailabilityForDay(id, _selectedDate);
         }
     }
 
@@ -129,29 +108,5 @@ else
 
         string base64 = Convert.ToBase64String(imageBytes);
         return $"data:image/jpeg;base64,{base64}";
-    }
-
-    public async Task<BitArray> GetAvailabilityForDay(int barberId, DateTime? day)
-    {
-
-        var availability = await Context.BarberScheduleDays
-            .Where(a => a.BarberId == barberId && a.Date == day.Value.ToUniversalTime())
-            .Select(a => a.AtuPattern)
-            .FirstOrDefaultAsync();
-
-        if (availability is null)
-        {
-            availability = new BitArray(Enumerable.Repeat<bool>(false, 96).ToArray());
-        }
-
-        return availability;
-    }
-
-    protected Task OpenDialogAsync()
-    {
-        var options = new DialogOptions { CloseOnEscapeKey = true, MaxWidth = MaxWidth.ExtraExtraLarge, FullWidth = true };
-        var params_ = new DialogParameters<BarberPageDialog> { { x => x.AtuPattern, AtuPattern } };
-
-        return DialogService.ShowAsync<BarberPageDialog>("Book time", params_, options);
     }
 }
