--- a/Components/Pages/AuthPage.razor
+++ b/Components/Pages/AuthPage.razor
@@ -1,9 +1,11 @@
 ﻿@page "/auth"
 @rendermode InteractiveServer
+@using MudBlazor
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager Navigation
+@inject IJSRuntime JS
 
 <MudGrid Style="width: 40%" Class="mx-auto">
     @if (!regPressed)
@@ -12,11 +14,11 @@
             <MudPaper Class="pa-4">
                 <MudForm @ref="form" @bind-IsValid="success" @bind-Errors="errors">
                     <MudTextField T="string" Label="Email" @bind-Value="loginEmail"
-                                  Required="true" RequiredError="Адрес эл. почты обязателен"
-                                  Validation="@(new EmailAddressAttribute { ErrorMessage = "Недопустимый адрес эл. почты" })" />
+                                    Required="true" RequiredError="Адрес эл. почты обязателен"
+                                    Validation="@(new EmailAddressAttribute { ErrorMessage = "Недопустимый адрес эл. почты" })" />
                     <MudTextField T="string" Label="Password" @bind-Value="loginPassword"
-                                  InputType="InputType.Password"
-                                  Required="true" RequiredError="Пароль обязателен" />
+                                    InputType="InputType.Password"
+                                    Required="true" RequiredError="Пароль обязателен" />
                     <div class="d-flex align-center justify-space-between">
                         <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" Class="mr-auto mt-4" @onclick="LoginAsync">Войти</MudButton>
                         <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mr-auto mt-4" @onclick="Toggle">Зарегистрироваться</MudButton>
@@ -155,23 +157,17 @@
     private async Task LoginAsync()
     {
         await form.Validate();
-        if (!success) return;
+        if (!success)
+            return;
 
-        var client = HttpClientFactory.CreateClient("server");
-        var content = new FormUrlEncodedContent(new Dictionary<string, string>
-        {
-            { "email", loginEmail },
-            { "password", loginPassword }
-        });
+        bool ok = await JS.InvokeAsync<bool>("auth.login", loginEmail, loginPassword);
 
-        var response = await client.PostAsync("api/auth/login", content);
-
-        if (!response.IsSuccessStatusCode)
+        if (!ok)
         {
             errors = new[] { "Неверный адрес эл. почты или пароль" };
             return;
         }
 
-        Navigation.NavigateTo("/", true);
+        Navigation.NavigateTo("/", forceLoad: true);
     }
 }
