--- a/Components/Pages/Profile.razor
+++ b/Components/Pages/Profile.razor
@@ -1,4 +1,9 @@
-﻿@inherits AccountPage
+﻿@namespace barberchainAPI.Components.Pages
+@inject IDialogService DialogService
+@inject BarberchainDbContext Context
+@using MudBlazor
+@using System.Collections
+@using System.Security.Claims
 
 @if (account is null)
 {
@@ -11,7 +16,7 @@ else
     <MudPaper Elevation="3" Class="p-4 rounded-lg">
 
         <MudContainer Style="display:flex; padding-top:1rem;">
-            <MudImage Src="@GetImageSrc(account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%;" />
+            <MudImage Src="@AccountPage.GetImageSrc(account.ProfilePic)" Class="rounded-lg" Elevation="25" ObjectFit="ObjectFit.Cover" Style="max-width:50%;" />
             <MudContainer Style="display:flex; flex-direction:column; align-items:flex-start;">
                 <MudText Typo="Typo.h5" Align="Align.Center">@account.Lastname @account.Restname</MudText>
                 <MudText Typo="Typo.h6" Align="Align.Center">обо мне:</MudText>
@@ -70,4 +75,72 @@ else
             </MudButton>
         }
     </MudPaper>
+}
+
+@code{
+    [Parameter]
+    public int id { get; set; }
+
+    [Parameter]
+    public Account? account { get; set; }
+
+    [Parameter]
+    public ClaimsPrincipal? user { get; set; }
+
+    private bool _loaded = false;
+
+    //Barber variables
+    protected List<BarberJob> jobs;
+    protected Barber? barber;
+    public BitArray? AtuPattern { get; set; }
+
+    protected DateTime? _selectedDate = DateTime.Today;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        // IF account is now available (interactive phase)
+        if (account != null && !_loaded)
+        {
+            _loaded = true;
+
+            if (account.Role == AccountRole.Barber)
+            {
+                barber = await Context.Barbers
+                    .Include(b => b.Account)
+                    .Include(b => b.Images)
+                    .FirstOrDefaultAsync(b => b.AccountId == id);
+
+                jobs = await Context.BarberJobs
+                    .Include(x => x.Job)
+                    .Where(x => x.BarberId == id)
+                    .ToListAsync();
+
+                AtuPattern = await GetAvailabilityForDay(id, _selectedDate);
+            }
+        }
+    }
+
+    public async Task<BitArray> GetAvailabilityForDay(int barberId, DateTime? day)
+    {
+
+        var availability = await Context.BarberScheduleDays
+            .Where(a => a.BarberId == barberId && a.Date == day.Value.ToUniversalTime())
+            .Select(a => a.AtuPattern)
+            .FirstOrDefaultAsync();
+
+        if (availability is null)
+        {
+            availability = new BitArray(Enumerable.Repeat<bool>(false, 96).ToArray());
+        }
+
+        return availability;
+    }
+
+    protected Task OpenDialogAsync()
+    {
+        var options = new DialogOptions { CloseOnEscapeKey = true, MaxWidth = MaxWidth.ExtraExtraLarge, FullWidth = true };
+        var params_ = new DialogParameters<BarberPageDialog> { { x => x.AtuPattern, AtuPattern } };
+
+        return DialogService.ShowAsync<BarberPageDialog>("Book time", params_, options);
+    }
 }
