Made cart work for single account. Cart is stored in localStorage of the browser. Gonna have to make cart local to each account. Added service choosing on barber and barbershop's pages.

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -20,6 +20,7 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
     <script src="login.js"></script>
+    <script src="localStorageHelper.js"></script>
 </body>
 
 </html>
